# Vitalux

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: ansi_code.rs  ansi_escape_code.rs  colors.rs  helpers.rs  into_styles.rs  lib.rs  main.rs  prelude.rs  styled_text.rs  styles.rs  test.rs  traits.rs
src/styles/: basic_color.rs  formatter.rs  mod.rs  paint_type.rs  palette.rs  rgb.rs
