[package]
name = "vitalux"
version = "0.1.0"
edition = "2021"
description = "Colorize Your Terminal with Vitalux: A Rust-powered Formatting Tool"
authors = ["Siavash Siamhb7@protonmail.com"]
homepage = "https://crates.io/crates/vitalux"
repository = "https://github.com/Syaw0/Vitalux"
license-file = "./LICENSE"
keywords = ["cli","terminal","rust","tool","coloize","formatter"]
categories = ["terminal","cli","command-line-utilitise"]

[dependencies]
